--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,68 +5,68 @@
 
 //====================================================================================================
 
-//Burger
-// .icon-menu{
-// 	display: none;
-// } 
+// Burger
+.icon-menu{
+	display: none;
+} 
 //====================================================================================================
-// 	@media (max-width:$tablet) {
+	@media (max-width:$tablet) {
 
-// 	.icon-menu{
-// 		position: fixed;
-// 		right: 15px;
-// 		display: flex;
-// 		flex-direction: column;		
-// 		justify-content: center;
-// 		align-items: center;
-// 		width: rem(35);
-// 		height: rem(45);
-// 		z-index: 5;
-// 		cursor: pointer;
+	.icon-menu{
+		position: fixed;
+		right: 15px;
+		display: flex;
+		flex-direction: column;		
+		justify-content: center;
+		align-items: center;
+		width: rem(35);
+		height: rem(45);
+		z-index: 5;
+		cursor: pointer;
 
-// 		}
-// .header__container{
-// 	justify-content: space-between;
+		}
+.header__container{
+	justify-content: space-between;
 
 	
-// }
-// .header__logo{
-// 	position: fixed;
-// 	z-index: 5;
-// }
-// .menu__body{
-// 	position: fixed;
-// 	top: 0;
-// 	left: -100%;
-// 	width: 100%;
-// 	height: 100%;
-// 	background: #F1E4FF;
-// 	padding: 120px 30px 30px 30px;
-// 	transition: left	0.3s ease-in-out 0s;
-// 	overflow: auto;
-// 	z-index: 3;
-// 	opacity: 1;
-// 	&::before{
-// 		content: "";
-// 		position: fixed;
-// 		width: 100%;
-// 		min-height: 70px;
-// 		top: 0;
-// 		left: 0;
-// 		background: #bab1c5;
-// 	}
-// }
+}
+.header__logo{
+	position: fixed;
+	z-index: 5;
+}
+.menu__body{
+	position: fixed;
+	top: 0;
+	left: -100%;
+	width: 100%;
+	height: 100%;
+	background: #F1E4FF;
+	padding: 120px 30px 30px 30px;
+	transition: left	0.3s ease-in-out 0s;
+	overflow: auto;
+	z-index: 3;
+	opacity: 1;
+	&::before{
+		content: "";
+		position: fixed;
+		width: 100%;
+		min-height: 70px;
+		top: 0;
+		left: 0;
+		background: #bab1c5;
+	}
+}
 
-// .menu__body._active{
-// 	left: 0;
-// }
-// .menu__list{
-// 	flex-direction: column;
-// }
-// .menu__item{
-// 		margin-bottom: 50px;
-// 	}
-// }
+.menu__body._active{
+	left: 0;
+}
+.menu__list{
+	flex-direction: column;
+}
+.menu__item{
+		margin-bottom: 50px;
+	}
+}
 
 	//====================================================================================================
 	
