Finished the header

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,1 +1,38 @@
-// Заголовки, общие БЄМ блоки и проче...
+
+// section-inner
+//====================================================================================================
+.page {
+
+  &__inner {
+  }
+}
+.inner {
+
+  &__container {
+  }
+
+  &__body {
+  }
+
+  &__text {
+  }
+
+  &__title {
+  }
+
+  &__subtitle {
+  }
+
+  &__lang {
+  }
+
+  &__image {
+  }
+}
+.container {
+}
+
+
+
+//====================================================================================================
+
