--- a/src/scss/fonts/font.scss
+++ b/src/scss/fonts/font.scss
@@ -1,46 +1,18 @@
-@font-face {
-  font-family: 'Raleway';
-  src: url('./Raleway/Raleway-Black.eot');
-  src: url('./Raleway/Raleway-Black.eot?#iefix') format('embedded-opentype'),
-      url('./Raleway/Raleway-Black.woff2') format('woff2'),
-      url('./Raleway/Raleway-Black.woff') format('woff'),
-      url('./Raleway/Raleway-Black.svg') format('svg');
-  font-weight: 900;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: 'Manrope';
-  src: url('./Manrope/Manrope-Regular.eot');
-  src: url('./Manrope/Manrope-Regular.eot?#iefix') format('embedded-opentype'),
-      url('./Manrope/Manrope-Regular.woff2') format('woff2'),
-      url('./Manrope/Manrope-Regular.woff') format('woff'),
-      url('./Manrope/Manrope-Regular.svg#Manrope-Regular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
 
 @font-face {
-  font-family: 'Manrope';
-  src: url('./Manrope/Manrope-ExtraBold.eot');
-  src: url('./Manrope/Manrope-ExtraBold.eot?#iefix') format('embedded-opentype'),
-      url('./Manrope/Manrope-ExtraBold.woff2') format('woff2'),
-      url('./Manrope/Manrope-ExtraBold.woff') format('woff'),
-      url('./Manrope/Manrope-ExtraBold.svg#Manrope-ExtraBold') format('svg');
-  font-weight: bold;
-  font-style: normal;
+  font-family: "Gilroy-Bold";
   font-display: swap;
+  src: url("../fonts/Gilroy-Bold.woff2") format("woff2"), url("../fonts/Gilroy-Bold.woff") format("woff");
+  font-weight:100;
+  font-style: normal;
 }
+  
 
 @font-face {
-  font-family: 'Manrope';
-  src: url('./Manrope/Manrope-Bold.eot');
-  src: url('./Manrope/Manrope-Bold.eot?#iefix') format('embedded-opentype'),
-      url('./Manrope/Manrope-Bold.woff2') format('woff2'),
-      url('./Manrope/Manrope-Bold.woff') format('woff'),
-      url('./Manrope/Manrope-Bold.svg#Manrope-Bold') format('svg');
-  font-weight: bold;
-  font-style: normal;
+  font-family: "Gilroy-Medium";
   font-display: swap;
+  src: url("../fonts/Gilroy-Medium.woff2") format("woff2"), url("../fonts/Gilroy-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
 }
+  
