--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,6 +1,60 @@
 
 //====================================================================================================
+.page {
 
+	&__header {
+margin: 0px 0px 40px 0px;
+	
+
+	}
+}
+.header {
+
+	&__container {
+		display: flex;
+		min-height:70px ;
+		align-items: center;
+		border-bottom: 1px solid #828282;
+		transform: matrix(1, 0, 0, 1, 0, 0)
+	}
+
+	&__logo {
+	
+	}
+
+	&__menu {
+	}
+}
+.container {
+}
+.logo {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.menu {
+	flex: 1 0 auto;
+
+	&__body {
+	
+	}
+
+	&__list {
+		display: flex;	justify-content: space-around;
+		
+	}
+
+	&__item {
+	}
+
+	&__link {
+	font-family: 'Gilroy-Bold';
+	font-weight: 700;
+	font-size: 18px;
+	line-height: calc(22 / 18 *100%);
+  color:$textgray
+	}
+}
 
 
 //====================================================================================================
@@ -10,63 +64,63 @@
 	display: none;
 } 
 //====================================================================================================
-	@media (max-width:$tablet) {
+// 	@media (max-width:$tablet) {
 
-	.icon-menu{
-		position: fixed;
-		right: 15px;
-		display: flex;
-		flex-direction: column;		
-		justify-content: center;
-		align-items: center;
-		width: rem(35);
-		height: rem(45);
-		z-index: 5;
-		cursor: pointer;
+// 	.icon-menu{
+// 		position: fixed;
+// 		right: 15px;
+// 		display: flex;
+// 		flex-direction: column;		
+// 		justify-content: center;
+// 		align-items: center;
+// 		width: rem(35);
+// 		height: rem(45);
+// 		z-index: 5;
+// 		cursor: pointer;
 
-		}
-.header__container{
-	justify-content: space-between;
+// 		}
+// .header__container{
+// 	justify-content: space-between;
 
 	
-}
-.header__logo{
-	position: fixed;
-	z-index: 5;
-}
-.menu__body{
-	position: fixed;
-	top: 0;
-	left: -100%;
-	width: 100%;
-	height: 100%;
-	background: #F1E4FF;
-	padding: 120px 30px 30px 30px;
-	transition: left	0.3s ease-in-out 0s;
-	overflow: auto;
-	z-index: 3;
-	opacity: 1;
-	&::before{
-		content: "";
-		position: fixed;
-		width: 100%;
-		min-height: 70px;
-		top: 0;
-		left: 0;
-		background: #bab1c5;
-	}
-}
+// }
+// .header__logo{
+// 	position: fixed;
+// 	z-index: 5;
+// }
+// .menu__body{
+// 	position: fixed;
+// 	top: 0;
+// 	left: -100%;
+// 	width: 100%;
+// 	height: 100%;
+// 	background: #F1E4FF;
+// 	padding: 120px 30px 30px 30px;
+// 	transition: left	0.3s ease-in-out 0s;
+// 	overflow: auto;
+// 	z-index: 3;
+// 	opacity: 1;
+// 	&::before{
+// 		content: "";
+// 		position: fixed;
+// 		width: 100%;
+// 		min-height: 70px;
+// 		top: 0;
+// 		left: 0;
+// 		background: #bab1c5;
+// 	}
+// }
 
-.menu__body._active{
-	left: 0;
-}
-.menu__list{
-	flex-direction: column;
-}
-.menu__item{
-		margin-bottom: 50px;
-	}
-}
+// .menu__body._active{
+// 	left: 0;
+// }
+// .menu__list{
+// 	flex-direction: column;
+// }
+// .menu__item{
+// 		margin-bottom: 50px;
+// 	}
+// }
 
 	//====================================================================================================
 	
