--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,7 @@
 // Подключение шрифтов ===========================================================================================================================================================================================================================================================================
 
 // Подключить если есть локальные файлы шрифтов
-// @import "fonts/";
+@import "fonts/font";
 
 // Подключение иконочных шрифтов ==============================================================================================================================================================================================================================================================================
 // Подключить если есть файл иконочного шрифта
@@ -19,13 +19,13 @@
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: 'Manrope', sans-serif;
-$fontSize: rem(14); // где 14(px) - размер шрифта по умолчанию из макета
+$fontFamily: 'Gilroy', sans-serif;
+$fontSize: rem(16); // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
-$mainColor: #18191F; // Цвет шрифта по умолчанию
+$mainColor: #070707; // Цвет шрифта по умолчанию
 $footerbg:#0B0D17;
-$textgray:#D9DBE1;
+$textgray:#828282;
 
 // Настройки адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
@@ -34,7 +34,7 @@ $minWidth: 320;
 // Ширина полотна (макета)
 $maxWidth: 1440;
 // Ширина ограничивающего контейнера (0 = нет ограничения)
-$maxWidthContainer: 1110;
+$maxWidthContainer: 1030;
 // Общий отступ у контейнера
 // (30 = по 15px слева и справа, 0 = нет отступа)
 $containerPadding: 30;
