Finishing the footer

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -11,7 +11,7 @@
 // Стили для отзывчивых картинок (IBG)
 // Сниппет (HTML): ibg (div c картинкой и классами)
 // Сниппет (HTML): ibga (a c картинкой и классами)
-[class*="-ibg"] {
+[class*="ibg"] {
 	position: relative;
 	img {
 		position: absolute;
@@ -22,7 +22,7 @@
 		object-fit: cover;
 	}
 }
-[class*="-ibg_contain"] {
+[class*="ibg_contain"] {
 	img {
 		object-fit: contain;
 	}
