--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -19,6 +19,7 @@ margin: 0px 0px 40px 0px;
 	}
 
 	&__logo {
+		margin: 0px 120px 0px 0px;
 	
 	}
 
@@ -40,7 +41,7 @@ margin: 0px 0px 40px 0px;
 	}
 
 	&__list {
-		display: flex;	justify-content: space-around;
+		display: flex;	justify-content: space-between;
 		
 	}
 
@@ -52,7 +53,7 @@ margin: 0px 0px 40px 0px;
 	font-weight: 700;
 	font-size: 18px;
 	line-height: calc(22 / 18 *100%);
-  color:$textgray
+  color:$textgray;
 	}
 }
 
