--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,12 +1,83 @@
 
-// section-inner
+// INNER
 //====================================================================================================
 .page {
 
   &__inner {
+    margin: 0px 0px 100px 0px;
   }
 }
 .inner {
+
+  &__container {
+   
+  }
+
+  &__body {
+    display: flex;
+    flex-direction: column;
+   
+    
+  }
+
+  &__text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px 0px 40px 0px;
+    color: $mainColor;
+    font-weight: 700;
+    
+  }
+
+  &__title {
+  font-family: 'Gilroy-Bold';
+  font-size: 47.3392px;
+  line-height: percent(59px,47px);
+  
+  max-width:130px ;
+
+  }
+
+  &__subtitle {
+    max-width: 150px;
+
+    font-weight: 500;
+  }
+
+  &__lang {
+    transform: rotate(-90deg);
+    
+  }
+
+  &__image {
+img{
+  width: 100%;
+}
+
+
+  }
+}
+.lang {
+
+  &__gray {
+    color: $textgray;
+  }
+}
+
+
+
+
+// SKILLS 
+//====================================================================================================
+
+.page {
+
+  &__skills {
+    margin: 0px 0px 100px 0px;
+  }
+}
+.skills {
 
   &__container {
   }
@@ -15,24 +86,116 @@
   }
 
   &__text {
+    @include flex;
+    margin: 0px 0px 85px 0px;
   }
 
   &__title {
+    font-family: 'Gilroy-Bold';
+    font-size: 34px;
+    line-height: 42px;
+    padding: 0px 0px 70px 0px;
   }
 
   &__subtitle {
+    font-family: 'Gilroy-Medium';
+    font-weight: 500;
   }
 
-  &__lang {
+  &__icon {
+  }
+}
+.container {
+}
+.icon {
+
+  &__body {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__item {
+    @include flex;
+    max-width: 170px;
+    
+  }
+
+  &__item:last-child .icon__text {
+    margin: 0px 0px 56px 0px;
+
+  }
+
+  &__img {
+    margin: 0px 0px 25px 0px;
+  }
+
+  &__text {
+    max-width: 99px;
+    font-family: 'Gilroy-Bold';
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    margin: 0px 0px 40px 0px;
+  }
+
+  &__star {
+  }
+}
+
+// PORTFOLIO
+//====================================================================================================
+.page {
+
+  &__works {
+  }
+}
+.works {
+
+  &__container {
+  }
+
+  &__title {
+  font-family: 'Gilroy-Bold';
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 42px;
+  text-align: center;
+  padding: 0px 0px 50px 0px;
+  }
+
+  &__wrap {
+   
+  }
+
+  &__item {
+
   }
 
   &__image {
+    margin: 0px 0px 40px 0px;
+  }
+
+  &__text {
+    text-align: center;
+    margin: 0px 0px 100px 0px;
+    font-family: 'Gilroy-Medium';
+    font-size: 18px;
+    line-height: percent(24px,18px);
+    text-align: center;
+    text-decoration-line: underline;
   }
 }
 .container {
 }
 
 
+//====================================================================================================
+
+
+
 
 //====================================================================================================
 
+
+//====================================================================================================
