--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,7 +19,7 @@
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: 'Gilroy', sans-serif;
+$fontFamily: "Gilroy", sans-serif;
 $fontSize: rem(16); // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
@@ -60,10 +60,25 @@ $responsiveType: 1;
 @import "base/null";
 
 // Стили тега BODY ============================================================================================================================================================================================================================================================================================================================================================================================
-
-body{
+html,
+body {
+	height: 100%;
+	min-width: $minWidth + px;
+}
+body {
+	color: $mainColor;
+	line-height: 1;
+	font-family: $fontFamily;
+	font-size: $fontSize;
+	//text-rendering: optimizeLegibility;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 	-webkit-tap-highlight-color: transparent;
 }
+
 body._lock  {
 	// Скролл заблокирован
 		overflow: hidden;
@@ -72,6 +87,11 @@ body._lock  {
 	.loaded & {
 	}
 }
+// Стили тега MAIN ============================================================================================================================================================================================================================================================================================================================================================================================
+main{
+	color: $mainColor;
+}
+
 
 // Оболочка wrapper ============================================================================================================================================================================================================================================================================================================================================================================================================================================
 .wrapper {
