--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -65,7 +65,7 @@ margin: 0px 0px 40px 0px;
 	display: none;
 } 
 //====================================================================================================
-// 	@media (max-width:$tablet) {
+// 	@media (max-width:$mobile) {
 
 // 	.icon-menu{
 // 		position: fixed;
