--- a/src/scss/base/popup.scss
+++ b/src/scss/base/popup.scss
@@ -1,14 +1,3 @@
-.popup{
-	text-align: center;
-padding: 7px 13px;
-background: #3e3e3e;
-color: #fff;
-font-size: 15px;
-outline: none;
-border: none;
-border-radius: 5px;
-font-family: cursive;
-}
 
 .modal {
 position: fixed;
@@ -21,32 +10,74 @@ opacity: 0;
 visibility: hidden;
 transform: scale(1.1);
 transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+  overflow: auto;
 }
 .modal-content {
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-background-color: white;
-padding: 1rem 1.5rem;
-width: 100%;
-border-radius: 0.5rem;
+
 }
-.close-button {
-float: right;
-width: 1.5rem;
-line-height: 1.5rem;
-text-align: center;
-cursor: pointer;
-border-radius: 0.25rem;
-background-color: lightgray;
-}
-.close-button:hover {
-background-color: darkgray;
-}
+
 .show-modal {
 opacity: 1;
 visibility: visible;
 transform: scale(1.0);
 transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+
+//close button
+.close-button {
+  position: absolute;
+  right: 5%;
+  padding: 2px;
+}
+.cl-btn-6 {
+  position: relative;
+  margin: 20px auto;
+  width: 50px;
+  cursor: pointer;
+}
+.cl-btn-6-in {
+  width: inherit;
+  text-align: center;
+}
+.cl-btn-6-txt {
+  font-size: 8px;
+  line-height: 40px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #000000;
+  transition: all .3s ease-in;
+  opacity: 0;
+  cursor: pointer;
+  font-family: $fontFamily;
+}
+.cl-btn-6-in:before, .cl-btn-6-in:after {
+  position: absolute;
+  content: '';
+  height: 4px;
+  width: inherit;
+  background: #000000;
+  left: 0;
+  transition: all .3s ease-in;
+}
+.cl-btn-6-in:before {
+  top: calc(50% - 4px);
+  transform: rotate(45deg);
+}
+.cl-btn-6-in:after {
+  bottom: 50%;
+  transform: rotate(-45deg);
+}
+.cl-btn-6:hover .cl-btn-6-txt {
+  opacity: 1;
+}
+.cl-btn-6:hover .cl-btn-6-in:before,
+.cl-btn-6:hover .cl-btn-6-in:after {
+  transform: rotate(0);
+}
+.cl-btn-6:hover .cl-btn-6-in:before {
+  top: 0;
+}
+.cl-btn-6:hover .cl-btn-6-in:after {
+  bottom: 0;
 }
