--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -49,8 +49,12 @@
   }
 
   &__image {
+
 img{
-  width: 100%;
+width: 100%;
+  height: 500px;
+  object-fit: cover;
+
 }
   }
 }
@@ -175,7 +179,7 @@ img{
   &__text {
     text-align: center;
     font-weight: 500;
-    margin: 0px 0px 100px 0px;
+
     font-size: 18px;
     line-height: percent(24px,18px);
     text-align: center;
