--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -47,6 +47,9 @@ margin: 0px 0px 40px 0px;
 
 	&__item {
 	}
+	.menu__list .menu__item:nth-child(1){
+		display: none;
+	}
 
 	&__link {
 	font-family: 'Gilroy-Bold';
@@ -54,6 +57,10 @@ margin: 0px 0px 40px 0px;
 	font-size: 18px;
 	line-height: calc(22 / 18 *100%);
   color:$textgray;
+		&:hover{
+			color: #363333;
+			transition: color 0.5s ease;
+		}
 	}
 }
 
@@ -65,63 +72,64 @@ margin: 0px 0px 40px 0px;
 	display: none;
 } 
 //====================================================================================================
-// 	@media (max-width:$mobile) {
+ 	@media (max-width:$mobile) {
 
-// 	.icon-menu{
-// 		position: fixed;
-// 		right: 15px;
-// 		display: flex;
-// 		flex-direction: column;		
-// 		justify-content: center;
-// 		align-items: center;
-// 		width: rem(35);
-// 		height: rem(45);
-// 		z-index: 5;
-// 		cursor: pointer;
+ 	.icon-menu{
+		position: absolute;
+		top: 0%;
+		right: 5px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		width: 4.5rem;
+		height: 3.8125rem;
+		z-index: 5;
+		cursor: pointer;
 
-// 		}
-// .header__container{
-// 	justify-content: space-between;
+ 		}
+ .header__container{
+ 	justify-content: space-between;
 
 	
-// }
-// .header__logo{
-// 	position: fixed;
-// 	z-index: 5;
-// }
-// .menu__body{
-// 	position: fixed;
-// 	top: 0;
-// 	left: -100%;
-// 	width: 100%;
-// 	height: 100%;
-// 	background: #F1E4FF;
-// 	padding: 120px 30px 30px 30px;
-// 	transition: left	0.3s ease-in-out 0s;
-// 	overflow: auto;
-// 	z-index: 3;
-// 	opacity: 1;
-// 	&::before{
-// 		content: "";
-// 		position: fixed;
-// 		width: 100%;
-// 		min-height: 70px;
-// 		top: 0;
-// 		left: 0;
-// 		background: #bab1c5;
-// 	}
-// }
+ }
+ .header__logo{
+ 	display: none;
+ }
+ .menu__body{
+ 	position: fixed;
+ 	top: 0;
+ 	left: -100%;
+ 	width: 100%;
+ 	height: 100vh;
+ 	padding: 71px 30px 30px 30px;
+ 	transition: left	0.3s ease-in-out 0s;
+ 	overflow: auto;
+ 	z-index: 3;
+ 	opacity: 1;
+	 background-color: #FFFFFF;
 
-// .menu__body._active{
-// 	left: 0;
-// }
-// .menu__list{
-// 	flex-direction: column;
-// }
-// .menu__item{
-// 		margin-bottom: 50px;
-// 	}
-// }
+
+ }
+
+ .menu__body._active{
+ 	left: 0;
+
+ }
+ .menu__list{
+ 	flex-direction: column;
+
+
+ }
+ .menu__item{
+ 		margin-bottom: 50px;
+
+ 	}
+
+
+
+ }
+
 
 	//====================================================================================================
 	
